fixed img alignment

--- a/css/index.css
+++ b/css/index.css
@@ -201,6 +201,9 @@ a {
 .nav-bar nav a:hover {
   color: #222222;
 }
+footer {
+  background: #828282;
+}
 .container .jumbo-container {
   position: relative;
 }
@@ -271,6 +274,9 @@ a {
 .container .big-content-section .big-content-2,
 .container .big-content-section .big-content-3 {
   position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .container .big-content-section .p-content {
   display: flex;
@@ -285,15 +291,16 @@ a {
 }
 .container .big-content-1 .h2-graybox {
   position: absolute;
-  left: 55.5%;
-  bottom: 55%;
+  left: 62.7%;
+  bottom: 58%;
 }
 .container .big-content-2 .h2-graybox {
   position: absolute;
-  bottom: 55%;
+  left: 7.2%;
+  bottom: 58%;
 }
 .container .big-content-3 .h2-graybox {
   position: absolute;
-  left: 55.5%;
-  bottom: 55%;
+  left: 62.7%;
+  bottom: 58%;
 }
