--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,10 @@
 
         .big-content-1, .big-content-2, .big-content-3 {
             position: relative;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+
         }
 
         .p-content {
@@ -79,8 +83,8 @@
 
         .h2-graybox {
             position: absolute;
-            left: 55.5%;
-            bottom: 55%;
+            left: 62.7%;
+            bottom: 58%;
         }
     }
 
@@ -88,7 +92,8 @@
 
         .h2-graybox {
             position: absolute;
-            bottom: 55%;
+            left: 7.2%;
+            bottom: 58%;
         }
     }
 
@@ -96,8 +101,8 @@
 
         .h2-graybox {
             position: absolute;
-            left: 55.5%;
-            bottom: 55%;
+            left: 62.7%;
+            bottom: 58%;
         }
     }
   
